--- a/project_№5/src/blocks/popup/popup.css
+++ b/project_№5/src/blocks/popup/popup.css
@@ -8,6 +8,13 @@
 @import url('./__caption/popup__caption.css');
 @import url('./__image/popup__image.css');
 
+
+@import url('./__error/popup__error.css');
+@import url('./__error/_active/popup__error_active.css');
+@import url('./__input/_error/popup__input_error.css');
+@import url('./__button/_inactive/popup__button_inactive.css');
+@import url('./__field/popup__field.css');
+
 .popup {
   font-family: 'Inter', Arial, sans-serif;
   display: none;
