--- a/project_№5-6/src/blocks/page/__content/page__content.css
+++ b/project_№5-6/src/blocks/page/__content/page__content.css
@@ -1,5 +1,5 @@
 .page__content {
-  background-color: black;
+  background-color: #000;
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
