--- a/project_№5-6/src/blocks/profile/profile.css
+++ b/project_№5-6/src/blocks/profile/profile.css
@@ -3,7 +3,9 @@
 @import url('./__edit-button/profile__edit-button.css');
 @import url('./__info/profile__info.css');
 @import url('./__title/profile__title.css');
+@import url('./__avatar/profile__avatar.css');
 @import url('./__image/profile__image.css');
+@import url('./__overlay/profile__overlay.css');
 
 .profile {
   font-family: 'Inter', Arial, sans-serif;
